src/styles/_header.scss
header {
  font-family: $heading;
  height: 50%;
  border-bottom: 2px solid $primary;
  margin-bottom: 20px;
}

// :root {
//   --primary-color: rgba(88, 155, 105, 1);
//   --secondary-color:rgb(40, 40, 40) ;
//   --complimentary-color: rgba(218, 215, 7, 1);
// }

// :root {
//   --primary-color: blue;
//   --secondary-color:rgba(218, 215, 7, 1);
//   --complimentary-color: rgb(40, 40, 40);
// }
:root {
  --primary-color: rgba(88, 155, 105, 1);
  --secondary-color: rgba(218, 215, 7, 1);
  --complimentary-color: rgb(40, 40, 40);
}

main{
  display: flex;
  justify-content: center;
  height: 100vh;
  position: relative;
}

.fixHeaderText{
  position: relative;
}

.homeButton{
  font-size: 3rem;
}

.container {
  min-height: 10vh;
  position: relative;
  width: 100vw;
  display: flex;
  background-color: var(--complimentary-color);
  justify-content: center;
  align-items: center;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  position: relative;
}

h1 {
  font-size: 150px;
  color: var(--primary-color);
  transform: translateY(-600px);
  animation: 1.2s slideIn ease-in-out forwards 1s;
  z-index: 10;
  opacity: 0;
  position: relative;
}

h1::before {
    content: '';
    width: 0%;
    height: 76px;
    background-color: var(--secondary-color);
    position: absolute;
    bottom: -10px;
    animation: 1s underline ease-in-out forwards 2s;
    mix-blend-mode: screen;
}

.overlay {
    position: absolute;
    width: 100%;
    top: 0;
    bottom: 0;
    opacity: 0;
    left: 0;
    right: 0;
    background-color: var(--secondary-color);
    transform: scale(.5);
    animation: .5s slideIn ease-in-out forwards, 1s skewBg ease-in-out;
}

@keyframes skewBg {
  0% {
    transform: scale(.5);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes underline {
  100% {
    width: 100%;
  }
}

@keyframes slideIn {
  100% {
    transform: translateY(0px);
    opacity: 1;
  }
}

